Fix: When adding margin to column of media-carousel widget it breaks the UI [ED-4915]

--- a/assets/dev/scss/frontend/_grid.scss
+++ b/assets/dev/scss/frontend/_grid.scss
@@ -137,6 +137,11 @@
 	> .elementor-element {
 		width: 100%;
 	}
+
+	// Fix: When adding margin to column of carousel-widget, it breaks the UI
+	&.e-has-image-carousel-widget {
+		width: calc(100% - (var(--e-column-margin-left, 0px) + var(--e-column-margin-right, 0px)));
+	}
 }
 
 .elementor-widget {
